增加效果图

--- a/loading.html
+++ b/loading.html
@@ -10,7 +10,7 @@
     <h1>Loading</h1>
     <div>正在启动，请等待！</div>
     <script>
-      window.myAPI.startServerForSpawn();
+      window.myAPI.startServerForbat();
       console.log("-----------hello-------------")
     </script>
   </body>
